; ModuleID = '/home/carl/AnghaBench/systemd/src/basic/extr_virt.c_detect_vm_xen.c'
source_filename = "/home/carl/AnghaBench/systemd/src/basic/extr_virt.c_detect_vm_xen.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [10 x i8] c"/proc/xen\00", align 1
@F_OK = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [55 x i8] c"Virtualization XEN not found, /proc/xen does not exist\00", align 1
@VIRTUALIZATION_NONE = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [44 x i8] c"Virtualization XEN found (/proc/xen exists)\00", align 1
@VIRTUALIZATION_XEN = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @detect_vm_xen to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @detect_vm_xen() #0 {
  %1 = alloca i32, align 4
  %2 = load i32, i32* @F_OK, align 4
  %3 = call i64 @access(i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str, i64 0, i64 0), i32 %2)
  %4 = icmp slt i64 %3, 0
  br i1 %4, label %5, label %8

5:                                                ; preds = %0
  %6 = call i32 @log_debug(i8* getelementptr inbounds ([55 x i8], [55 x i8]* @.str.1, i64 0, i64 0))
  %7 = load i32, i32* @VIRTUALIZATION_NONE, align 4
  store i32 %7, i32* %1, align 4
  br label %11

8:                                                ; preds = %0
  %9 = call i32 @log_debug(i8* getelementptr inbounds ([44 x i8], [44 x i8]* @.str.2, i64 0, i64 0))
  %10 = load i32, i32* @VIRTUALIZATION_XEN, align 4
  store i32 %10, i32* %1, align 4
  br label %11

11:                                               ; preds = %8, %5
  %12 = load i32, i32* %1, align 4
  ret i32 %12
}

declare dso_local i64 @access(i8*, i32) #1

declare dso_local i32 @log_debug(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
